Various improvements to improve general library and compiler compatibility.
Details
-------
- CMake minimum version was set to 3.1 based on superficial study of release
  notes. Earlier versions do not generate the Threads::Threads target.
- CMakeLists.txt now requires C++11.
- Dependencies on Boost, Cairo, GLib, and GStreamer are now version checked
  based on a screening of release notes and changelogs for relevant API changes.
- Use of file(DOWNLOAD ...) in deps/CMakeLists.txt is replaced with a call
  to Wget due to possible issues with earlier CMake versions that were built
  without SSL support. Wget currently does not verify the server certificate
  which is certified by a DFN CA whose certificate is not widely distributed.
- Download, extraction, and processing of VBCTOOL are now done at build time.
- An include of <cstddef> has been added to src/Tree.hpp to ensure presence
  of std::ptrdiff_t.
- Reference to the C++14 template std::make_unique has been removed in favor
  of std::make_shared in VideoOutput.cpp, which is appropriate given that
  the pointer generated is an std::shared_ptr.
- Use of gst_bus_remove_watch was replaced by g_source_remove to allow
  GStreamer API versions older than 1.6.
- Boost System has been added as an explicit dependency because it appears to be
  missing from implicit dependencies of Boost Filesystem in earlier CMake versions.

Further changes
---------------
- Directories deps/skia and deps/depot_tools are removed since they are no longer
  needed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,20 @@
-cmake_minimum_required(VERSION 3.2)
+cmake_minimum_required(VERSION 3.1)
 project(vbc2vid CXX)
 
-find_package(Boost 1.46.0 REQUIRED COMPONENTS filesystem iostreams program_options)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+find_package(Boost 1.46.0 REQUIRED COMPONENTS filesystem iostreams program_options system)
 find_package(PkgConfig REQUIRED)
 find_package(Threads REQUIRED)
 
 # Find GStreamer and Cairo for video output
 pkg_check_modules(GST REQUIRED
+    glib-2.0
+    cairo>=1.2
     gstreamer-1.0
 )
-pkg_check_modules(CAIRO REQUIRED
-    cairo
-)
-link_directories(${Boost_LIBRARY_DIRS} ${CAIRO_LIBRARY_DIRS} ${GST_LIBRARY_DIRS})
+link_directories(${Boost_LIBRARY_DIRS} ${GST_LIBRARY_DIRS})
 
 # Set subdirectory paths
 set(SCRIPT_DIR ${CMAKE_SOURCE_DIR}/tools/gen_scripts)
@@ -34,7 +36,6 @@ add_executable(vbcrender ${SOURCES})
 target_include_directories(vbcrender
     PRIVATE
     ${Boost_INCLUDE_DIRS}
-    ${CAIRO_INCLUDE_DIRS}
     ${GST_INCLUDE_DIRS}
     src
 )
@@ -42,7 +43,6 @@ target_link_libraries(vbcrender
     PRIVATE
     ${Boost_LIBRARIES}
     ${GST_LIBRARIES}
-    ${CAIRO_LIBRARIES}
     Threads::Threads
 )
 add_dependencies(vbcrender generate_vbc_code)
